exfat: Depend on EXFAT_FS_SAMSUNG=n from mainline exfat filesystem
Adding a "depends on" from EXFAT_FS_SAMSUNG for !EXFAT_FS ended up some
how allowing both EXFAT_FS + EXFAT_FS_SAMSUNG.  Modifying our dependency
test to look for EXFAT_FS=n seemed to do better, but "make oldconfig"
didn't ask us if we want EXFAT_FS_SAMSUNG enabled.

Lets move the test to fs/exfat/Kconfig so that we're asked about the new
exfat filesystem on our next run of "make oldconfig".

--- a/drivers/staging/exfat/Kconfig
+++ b/drivers/staging/exfat/Kconfig
@@ -1,7 +1,7 @@
 # SPDX-License-Identifier: GPL-2.0
 config EXFAT_FS_SAMSUNG
 	tristate "exFAT fs support"
-	depends on BLOCK && !EXFAT_FS
+	depends on BLOCK
 	select NLS
 	help
 	  This adds support for the exFAT file system.
